--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2 # may be actions/checkout@v2 now
       - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DOCKERHUB_TOKEN }} |  docker login -u avorwerk@bu.edu --password Snickers456
+        run: echo ${{ secrets.DOCKERHUB_TOKEN }} |  docker login -u avorwerk@bu.edu --password-stdin
       - name: Get the version
         id: vars
         run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
